# rac-core

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  RAC-Explorer-Design-System.md  README.md  SECURITY.md  action.yml  backlog.md  mkdocs.yml  pyproject.toml  sbom.json  server.json
.agent-context/: GAPS_TRACEABILITY.md  cold-start-timing.md
.cursor/: rules
.decided/: config.yaml
.github/: copilot-instructions.md
decisiongrounding/: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
decisiongrounding/decisions/: ADR-0002-real-corpus-pilot-peps.md  ADR-0003-rac-arm-pep-integration.md
decisiongrounding/ingest/: __init__.py  peps.py
decisiongrounding/providers/: answering.py  base.py  embedding.py  grounding_format.py  naive_rag.py
decisiongrounding/results/: .gitignore  README.md
decisiongrounding/scenarios/: __init__.py  loader.py
decisiongrounding/scenarios/negative_control_cache_ttl/: scenario.json
decisiongrounding/scenarios/negative_control_cache_ttl/corpus/: DG-ADR-RL-001.md  DG-ADR-SEC-001.md
decisiongrounding/scenarios/prohibition_language_migration/: scenario.json
decisiongrounding/scenarios/prohibition_language_migration/corpus/: DG-ADR-LANG-001.md
decisiongrounding/scenarios/simple_adherence_logging/: scenario.json
decisiongrounding/scenarios/simple_adherence_logging/corpus/: DG-ADR-LOG-001.md
decisiongrounding/scenarios/superseded_decision/: scenario.json
decisiongrounding/scenarios/superseded_decision/corpus/: DG-ADR-DBA-001.md  DG-ADR-DBA-002.md
decisiongrounding/scenarios_real/peps_version_supersession/: provenance.json  scenario.json
decisiongrounding/scenarios_real/peps_version_supersession/corpus/: PEP-0386.md  PEP-0440.md
decisiongrounding/schema/: run_result.schema.json  scenario.schema.json
decisiongrounding/spec/: scenario-taxonomy.md  scoring-rubric.md
decisiongrounding/tests/: test_ingest_peps.py  test_real_backends.py  test_real_scenarios.py
docs/: artifacts.md  cli.md  context-cost.md  decisions-on-pr.md  ecosystem.md  examples.md  governance.md  index.md  integration-recipes.md  mcp.md  okf-profile.md  org-grounding.md  quickstart.md  relationships.md  repo-workflow.md  scale.md  security.md  shared-server.md  testing.md  v0.22-housekeeping-runbook.md  validation.md  watchkeeper.md
examples/: example_dashboard_v1.md  example_dashboard_v2.md
lore-overlay/core/: Cargo.toml
lore-overlay/core/src/: config.rs  error.rs  flow.rs  gateway.rs  github.rs  lib.rs  rac.rs
lore-overlay/core/tests/: flow_test.rs
lore-web/: DESIGN.md  VIEWER_CONTRACT.md  index.html  package.json
overrides/: home.html
packaging/requirements-as-code-shim/: PUBLISHING.md  pyproject.toml
pr-gate-action/: action.yml
rac/: artifacts.py  classification.py  cli.py  inspect.py  models.py  output.py  outputs.py  parser.py  portfolio.py  relationships.py  stats.py  validate.py
rac-localview/: VIEWER_CONTRACT.md  package-lock.json  package.json
research/: 2026-07-agentic-tooling-demand.md  2026-07-enterprise-adoption-review.md
rust/: .gitignore  CLOSURE-PLAN.md  CLOSURE-REPORT.md  COUNCIL-REVIEW.md  Cargo.toml  HEAL-PLAN.md  HEAL-REPORT.md  INDEX-PLAN.md  INDEX-REPORT.md  P6-SCALE-CERTIFICATION.md  PARITY-REPORT.md  PERF-REPORT.md  PORT-CONTRACT.md  mcp-parity-cases.json  parity-cases-closure.json  parity-cases-index.json  parity-cases-retrieve.json  parity-cases.json  rust-toolchain.toml
rust/parity-harness/: Cargo.toml
rust/parity-harness/src/: main.rs
rust/rac-engine/: Cargo.toml
rust/rac-engine/assets/portal/: asdecided-portal-shell.html
rust/rac-engine/assets/skills/decided-import/: SKILL.md
rust/rac-engine/assets/spec/: artifact-specs.json
rust/rac-engine/examples/: p6_scale.rs  p6_soak.rs  store_write.rs
rust/rac-engine/src/: agent_rules.rs  budget.rs  classify.rs  cli.rs  commands.rs  compare.rs  consent.rs  coverage.rs  delta_generation.rs  derived.rs  derived_cache.rs  diff.rs  doctor.rs  eval.rs  export.rs  freshness.rs  freshness_watch.rs  frontmatter.rs  gate.rs  gitinfo.rs  hook.rs  identity.rs  improve.rs  index.rs  index_format.rs  index_store.rs  inspect.rs  intent.rs  lib.rs  markdown.rs  mdhtml.rs  okf.rs  output.rs  parallel_build.rs  parse.rs  portal.rs  portfolio.rs  pycompat.rs  pyjson.rs  read_model.rs  (+17 more)
rust/rac-engine/tests/: classify_vectors.rs  freshness_tracker.rs  frontmatter_differential.rs  frontmatter_vectors.rs  gitinfo.rs  grounding_models.rs  hostile_inputs.rs  incremental_validate.rs  index_store_vectors.rs  markdown_fuzz.rs  markdown_vectors.rs  mdhtml_vectors.rs  parallel_build.rs  pycompat_vectors.rs  pyjson_vectors.rs  resolve_vectors.rs  retrieve_vectors.rs  spec.rs  validate_vectors.rs  walk.rs
rust/rac-engine/tests/vectors/: classify.json  frontmatter.json  gitinfo.json  index_store.json  mdhtml.json  pycompat.json  pyjson.json  resolve.json  retrieve.json  spec.json  validate.json  walk.json
rust/rac-engine/tests/vectors/files/: crlf.md  frontmatter.md  non-utf8.md  normal.md
scripts/: generate_sbom.py
tests/: conftest.py  test_agent_rules.py  test_applies_to.py  test_b1_read_model.py  test_b2_index_store.py  test_b3_freshness.py  test_b3b_postings_search.py  test_b4_incremental_validate.py  test_b5_scale_hardening.py  test_b5b_point_resolution.py  test_b6_parallel_merge.py  test_cadence.py  test_char_author.py  test_char_compare.py  test_char_core.py  test_char_enforce.py  test_char_graph.py  test_char_ingest.py  test_char_mcp.py  test_char_ops.py  test_char_report.py  test_char_retrieve.py  test_characterization_cli_outputs.py  test_characterization_exit_codes.py  test_cli.py  test_compare.py  (+105 more)
wayfinder/: EXPLAINER.md  Makefile  README.md  pyproject.toml
wayfinder/decisions/: WF-ADR-0001-standalone-deterministic-router.md  WF-ADR-0003-calibration-and-classifier.md  WF-ADR-0005-calibration-explain-ui.md
wayfinder/tests/: test_cli.py  test_complexity.py  test_config.py  test_gateway.py  test_ui.py
wayfinder/wayfinder/: __init__.py  calibrate.py  cli.py  complexity.py  config.py  gateway.py  ui.py
(+1098 files in other folders)
