[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rac-core"
# Version is derived from the git tag by setuptools-scm (see [tool.setuptools_scm]).
# Release flow: tag vX.Y.Z -> the build is version X.Y.Z. No manual edits.
dynamic = ["version"]
description = "Engineering decisions your agents can follow."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Tom Ballard" }]
keywords = ["requirements", "product-management", "markdown", "linter", "cli", "diff"]
dependencies = ["markdown-it-py>=3.0", "pyyaml>=6.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Documentation",
]

[project.urls]
Homepage = "https://github.com/itsthelore/rac-core"
Repository = "https://github.com/itsthelore/rac-core"
Issues = "https://github.com/itsthelore/rac-core/issues"

[project.optional-dependencies]
# Ingest is an ancillary Python connector and Explorer is retired. The dev
# extra retains their frozen dependencies only for bounded retirement tests.
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "types-PyYAML",
    "textual>=1.0",
    "markitdown[docx,pdf,pptx,xlsx,xls]",
    "python-docx",
    "python-pptx",
    "openpyxl",
    "reportlab",
]

[project.scripts]
decided = "asdecided.dispatch:main"

[tool.setuptools]
# src/ layout: the package root is src/ and the SDK import package is
# `asdecided`. The public CLI is a thin launcher for the native Rust engine.
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# Discover asdecided and every asdecided.* subpackage automatically, so new layer packages
# do not need to be enumerated here.
where = ["src"]

[tool.setuptools.package-data]
# The shared artifact-spec registry ships with the distribution (ADR-063
# Guard 1): `asdecided.core.artifacts` loads ARTIFACT_SPECS from it via
# importlib.resources, and the Rust engine embeds the same file — one shared,
# language-neutral source of truth both engines read.
"asdecided.spec" = ["*.json"]
# Bundled native (Rust) engine binaries (native-engine cutover, ADR-116): a
# platform wheel places `decided`/`decided-mcp` here and the launcher execs
# them. There is deliberately no Python CLI fallback.
"asdecided.bin" = ["decided", "decided-mcp", "decided.exe", "decided-mcp.exe"]
# Canonical artifact templates ship with the distribution (v0.7.10, ADR-021):
# `rac new` loads them via importlib.resources, never from the repository.
# The vendored Portal shell and its provenance manifest ship the same way
# (v0.11.0): `rac export --html` loads them via importlib.resources.
"asdecided.templates" = ["*.md", "portal/*.html", "portal/*.json"]
# The Explorer stylesheet ships with the distribution (v0.8.7): the app loads
# it via CSS_PATH, resolved relative to the installed package.
"asdecided.explorer" = ["*.tcss"]
# The bundled Claude Code agent skill ships with the distribution (v0.10.4):
# `rac skill install` loads it via importlib.resources, never from the
# repository. A test pins it byte-for-byte to the dogfood copy (REQ-007).
"asdecided.skills" = ["*/SKILL.md"]
# Bundled git hook scripts ship with the distribution (v0.13.4): `rac hook
# install` loads them via importlib.resources, never from the repository.
"asdecided.hooks" = ["*.sh"]

[tool.setuptools_scm]
# Defaults are fine: version comes from the latest `vX.Y.Z` git tag.

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Quality gates pinned by v0.7.14 (Initiative 2). Golden tests pin CLI output
# byte-for-byte, so lint/format fixes must never change string contents.
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# MarkItDown ships no type stubs; it is imported lazily inside rac.services.ingest.
module = "markitdown.*"
ignore_missing_imports = true
