# Transitional redirect package for the rename requirements-as-code -> rac-core
# (ADR-092). This builds a metadata-only distribution under the OLD name whose
# only job is to depend on `rac-core`, so existing `pip install requirements-as-code`
# keeps working. It ships NO code of its own — the `rac` import and CLI come from
# rac-core. Published once, then frozen; real engine releases go to rac-core.
#
# This directory is NOT part of the main rac-core build (that discovers packages
# under src/ only); it is built and published on its own. See PUBLISHING.md.
[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "requirements-as-code"
# Must be strictly greater than the final real requirements-as-code release so an
# unpinned `pip install requirements-as-code` resolves to this redirect. `==<old>`
# pins still resolve to the real historical releases. Confirm/bump before publish.
#
# Intentionally CalVer, even though rac-core reverted to SemVer (ADR-111): no
# SemVer number can outrank the last real CalVer release (`1.0.0 < 2026.6.4` in
# PEP 440), so a SemVer version here would NOT resolve as default without yanking
# the historical releases. `2026.6.99` outranks them and needs no yank. Do not
# "fix" this to SemVer without also yanking 2026.6.x on this project.
version = "2026.6.99"
description = "Renamed to rac-core. Transitional redirect — install rac-core instead."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Tom Ballard", email = "tom@armytage.co" }]
keywords = ["requirements-as-code", "rac", "rac-core", "moved", "renamed"]
# The whole point: pulling this in pulls in the renamed package. The floor is the
# first SemVer rac-core release (ADR-111 reverted CalVer): it must NOT be a CalVer
# floor like `>=2026.6`, because `0.22.0 < 2026.6` in PEP 440 — such a floor would
# reject every SemVer rac-core and, once the CalVer dists are yanked, resolve to
# nothing. `>=0.22.0` follows the SemVer line forever and never lands on a yanked
# CalVer build.
dependencies = ["rac-core>=0.22.0"]

[project.urls]
Homepage = "https://github.com/itsthelore/rac-core"
Repository = "https://github.com/itsthelore/rac-core"

[tool.setuptools]
# Metapackage: no modules, no packages. The wheel carries metadata + the
# rac-core dependency only, so it never shadows rac-core's `rac` import.
packages = []
