[package]
name = "parity-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# The scoreboard is JSON and two normalizations reparse JSON payloads.
# `preserve_order` is load-bearing: normalized JSON must keep the engines'
# insertion key order so a key-ordering divergence is still visible after
# a strip/mask normalization.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
