[package]
name = "rac-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rayon = "1"
memmap2 = "0.9"
markdown-it = { version = "0.6.1", default-features = false }
